--- a/MY HTML PROJECT/Carousel slide/style.css
+++ b/MY HTML PROJECT/Carousel slide/style.css
@@ -22,7 +22,7 @@ img {
 /* background image */
 
 body {
-  background-image: url(images/hotbenz3.jpg);
+  background-image: url(hotbenz3.jpg);
   background-size: cover;
 }
 
